navbar/img overlap issues fixed

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,13 +1,11 @@
 /* banner image, topbar */
-.banner {
+.container-fluid.banner {
   padding:0;
   position:relative;
   justify-content:center;
   overflow: hidden;
-  min-height: 25vh;
   max-height:40vh;
   max-width:1100px;
-  /*display: inline-block;*/
 }
 
 .banner-img {
@@ -17,13 +15,13 @@
   left:0;
   right:0;
   max-width:1100px;
-  min-height: inherit;
-  max-height:40vh;
+  max-height:inherit;
   display: inline-block;
 }
 
 .adjustable {
   width:100%;
+  background-size: cover;
   /* img-size 2591*761 */
 }
 
@@ -76,7 +74,6 @@ div.navbar.transparent.navbar-default {
   font-size:.5cm;
   text-align: center;
   vertical-align: middle;
-
   position:fixed;
   bottom:0;
   width:100%;
@@ -86,4 +83,9 @@ div.navbar.transparent.navbar-default {
 body {
   background-color: rgb(4,32,41);
   color: gray;
+}
+
+/*text*/
+.text {
+  padding-left:25px;
 }
